Add python.module docs

--- a/install
+++ b/install
@@ -41,6 +41,7 @@ inst exec build/uprocd "$prefix/share/uprocd/bin"
 inst data systemd/uprocd@.service "$prefix/lib/systemd/user"
 
 for man in build/man/*.?; do
+  [ $man == python.module.7 ] && continue
   section=${man##*.}
   inst data $man "$prefix/share/man/man$section"
 done
@@ -50,4 +51,6 @@ if grep -q CONFIG_PYTHON=yes tup.config; then
   inst data build/modules/python.module "$prefix/share/uprocd/modules"
   inst data build/modules/ipython.module "$prefix/share/uprocd/modules"
   inst data build/modules/_uprocd_modules.py "$prefix/share/uprocd/modules"
+
+  inst data build/man/python.module.7 "$prefix/share/man/man7"
 fi
