Support the uprocctl/u/u* aliases

--- a/install
+++ b/install
@@ -41,17 +41,15 @@ set -e
 prefix="${1:-/usr}"
 
 inst exec build/uprocctl "$prefix/bin"
+inst exec build/u "$prefix/bin"
 inst exec build/uprocd "$prefix/share/uprocd/bin"
 
 inst data systemd/uprocd@.service "$prefix/lib/systemd/user"
 
-hasdocs && for man in build/man/*.?; do
-  [ $man == python.module.7 ] && continue
-  section=${man##*.}
-  inst data $man "$prefix/share/man/man$section"
-done ||:
-
 if grep -q CONFIG_PYTHON=yes tup.config; then
+  inst exec build/upython "$prefix/bin"
+  inst exec build/uipython "$prefix/bin"
+
   inst exec build/modules/python.so "$prefix/share/uprocd/modules"
   inst data build/modules/python.module "$prefix/share/uprocd/modules"
   inst data build/modules/ipython.module "$prefix/share/uprocd/modules"
@@ -59,3 +57,9 @@ if grep -q CONFIG_PYTHON=yes tup.config; then
 
   hasdocs && inst data build/man/python.module.7 "$prefix/share/man/man7" ||:
 fi
+
+hasdocs && for man in build/man/*.?; do
+  [ $man == python.module.7 ] && continue
+  section=${man##*.}
+  inst data $man "$prefix/share/man/man$section"
+done ||:
