--- a/install
+++ b/install
@@ -62,8 +62,21 @@ if grep -q CONFIG_PYTHON=yes tup.config; then
   fi
 fi
 
+if grep -q CONFIG_RUBY=yes tup.config; then
+  inst exec build/uruby "$prefix/bin"
+
+  inst exec build/modules/ruby.so "$prefix/share/uprocd/modules"
+  inst data build/modules/ruby.module "$prefix/share/uprocd/modules"
+  inst data build/modules/_uprocd_requires.rb "$prefix/share/uprocd/modules"
+
+  if hasdocs; then
+    inst data build/man/ruby.module.7 "$prefix/share/man/man7"
+    ln -sf "$prefix/share/man/man1/u.1" "$prefix/share/man/man1/uruby.1"
+  fi
+fi
+
 hasdocs && for man in build/man/*.?; do
-  [ $man == python.module.7 ] && continue
+  [ $man == python.module.7 ] || [ $man == ruby.module.7 ] && continue
   section=${man##*.}
   inst data $man "$prefix/share/man/man$section"
 done ||:
